fix form widh issue on iphone 5c

--- a/wp-content/themes/olmarket/style.scss
+++ b/wp-content/themes/olmarket/style.scss
@@ -165,6 +165,7 @@ ul{
         border-radius: 5px;
         min-height: 21px;
         border: solid 1px gray;
+        max-width: 80%;
       }
       textarea{
         min-height: 107px;
